--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@ footer .text{font-size:17px}
   .hero h2{font-size:24px}
 }
 </style>
+
+  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17807832300"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-17807832300'); </script>
 </head>
 
 <body>
