--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ footer .text{font-size:18px}
 .legal a:hover{text-decoration:underline}
 </style>
 
-
+<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17815370524"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-17815370524'); </script>
 </head>
 <body>
 
