--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@ fetch("https://ipapi.co/json/")
 
 <!-- HERO -->
 <section class="hero">
-    <h1>Comida Colombiana</h1>
-    <h2>Gusto Popular</h2>
+    <h1></h1>
+    <h2> </h2>
     <button onclick="window.location.href='menu.html'">Ingresa</button>
 </section>
 
@@ -187,7 +187,7 @@ fetch("https://ipapi.co/json/")
     <h3>Tu Popular</h3>
 
     <div class="footer-box">
-        <div class="footer-icon">😊</div>
+        <div class="footer-icon"></div>
         <span class="text">Personas colombianas</span>
     </div>
 
