--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ fetch("https://ipapi.co/json/")
 <!-- HEADER -->
 <header>
     <span class="icon">&#9776;</span>
-    <span class="title">Comida Popular</span>
+    <span class="title"></span>
 </header>
 
 <!-- HERO -->
